--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "fs": "0.0.1-security",
     "pg": "^6.2.3",
     "pug": "^2.0.0-rc.2",
