Implemented bootstrap for all pages and reformatted pug files according to grid system.

--- a/package.json
+++ b/package.json
@@ -24,9 +24,19 @@
   "homepage": "https://github.com/madamerobot/avocadobook#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
+    "browser-sync": "^2.18.12",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
+    "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.4.0",
+    "gulp-header": "^1.8.8",
+    "gulp-less": "^3.3.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^1.5.4",
+    "jquery": "^1.12.4",
     "pg": "^6.2.3",
     "pug": "^2.0.0-rc.2",
     "sequelize": "^3.30.4"
